# libvmod-cstr

./: .travis.yml  Makefile.am  README.rst  configure.ac  vmod-cstr.spec
debian/: changelog  control  dirs
src/: Makefile.am  vmod_cstr.c  vmod_cstr.vcc
src/tests/: test01.vtc
